Add second implementation for many-to-many relationship